--- a/sanpham/post.html
+++ b/sanpham/post.html
@@ -121,19 +121,21 @@
         <div
           class="w-full container mx-auto flex flex-col sm:flex-row items-center justify-center text-sm font-bold uppercase mt-0 px-6 py-2"
         >
-          <a href="blog.html" class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
-            >Tin tức công nghệ</a
-          >
-          <a
-            href="../sanpham/blog.html"
-            class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
-            >Đánh giá sản phẩm</a
-          >
-          <a
-            href="../tuvan/blog.html"
-            class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
-            >Tư vấn</a
-          >
+        <a
+        href="/EasyTech/congnghe/index.html"
+        class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
+        >Tin tức công nghệ</a
+      >
+      <a
+        href="/EasyTech/sanpham/index.html"
+        class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
+        >Đánh giá sản phẩm</a
+      >
+      <a
+        href="/EasyTech/tuvan/index.html"
+        class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
+        >Tư vấn</a
+      >
         </div>
       </div>
     </nav>
