--- a/tuvan/index.html
+++ b/tuvan/index.html
@@ -157,17 +157,17 @@
           class="w-full container mx-auto flex flex-col sm:flex-row items-center justify-center text-sm font-bold uppercase mt-0 px-6 py-2"
         >
           <a
-            href="congnghe/index.html"
+            href="/EasyTech/congnghe/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Tin tức công nghệ</a
           >
           <a
-            href="sanpham/index.html"
+            href="/EasyTech/sanpham/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Đánh giá sản phẩm</a
           >
           <a
-            href="tuvan/index.html"
+            href="/EasyTech//EasyTech/tuvan/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Tư vấn</a
           >
@@ -180,7 +180,10 @@
       <section class="w-full md:w-2/3 flex flex-col items-center px-3">
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="tuvan/post.html" class="hover:opacity-75 image-wrapper">
+          <a
+            href="/EasyTech/tuvan/post.html"
+            class="hover:opacity-75 image-wrapper"
+          >
             <img
               src="https://cdnv2.tgdd.vn/mwg-static/tgdd/News/Thumb/1572616/tgdd-redmi-pad-se-8.7-4g-t638684697669512758.jpg"
               class="responsive-image"
@@ -189,12 +192,12 @@
           <div class="bg-white flex flex-col justify-start p-6">
             <!-- Nội dung bài viết -->
             <a
-              href="tuvan/index.html"
+              href="/EasyTech/tuvan/index.html"
               class="text-blue-700 text-sm font-bold uppercase pb-4"
               >Tư vấn</a
             >
             <a
-              href="tuvan/post.html"
+              href="/EasyTech/tuvan/post.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               Xiaomi Redmi Pad SE 8.7 WiFi: Món quà công nghệ ý nghĩa dành tặng
@@ -205,12 +208,12 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="tuvan/post.html" class="pb-6">
+            <a href="/EasyTech/tuvan/post.html" class="pb-6">
               Công nghệ số hiện nay đã len lỏi vào từng ngóc ngách cuộc sống, kể
               cả với những người lớn tuổi.
             </a>
             <a
-              href="tuvan/post.html"
+              href="/EasyTech/tuvan/post.html"
               class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
@@ -219,7 +222,10 @@
 
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="tuvan/post2.html" class="hover:opacity-75 image-wrapper">
+          <a
+            href="/EasyTech/tuvan/post2.html"
+            class="hover:opacity-75 image-wrapper"
+          >
             <img
               src="https://cdnv2.tgdd.vn/mwg-static/common/News/0/OPPO%20Find%20X8-23%20%281%29.jpg"
               class="responsive-image"
@@ -229,12 +235,12 @@
           <div class="bg-white flex flex-col justify-start p-6">
             <!-- Nội dung bài viết -->
             <a
-              href="tuvan/index.html"
+              href="/EasyTech/tuvan/index.html"
               class="text-blue-700 text-sm font-bold uppercase pb-4"
               >Đánh giá sản phẩm</a
             >
             <a
-              href="tuvan/post2.html"
+              href="/EasyTech/tuvan/post2.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               Đây chính là 5 lí do khiến bạn phải rút ví đặt mua OPPO Find X8
@@ -245,12 +251,12 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="tuvan/post2.html" class="pb-6">
+            <a href="/EasyTech/tuvan/post2.html" class="pb-6">
               OPPO Find X8 Series vừa chính thức ra mắt đã tạo nên một cơn sốt
               thực sự trong giới công nghệ.
             </a>
             <a
-              href="tuvan/post2.html"
+              href="/EasyTech/tuvan/post2.html"
               class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
@@ -259,7 +265,10 @@
 
         <article class="flex flex-row shadow my-4">
           <!-- Article Image -->
-          <a href="tuvan/post3.html" class="hover:opacity-75 image-wrapper">
+          <a
+            href="/EasyTech/tuvan/post3.html"
+            class="hover:opacity-75 image-wrapper"
+          >
             <img
               src="https://cdnv2.tgdd.vn/mwg-static/common/News/1572864/ASUS-Vivobook-S-16-OLED-M5606WA-1.jpg"
               class="responsive-image"
@@ -268,12 +277,12 @@
           <div class="bg-white flex flex-col justify-start p-6">
             <!-- Nội dung bài viết -->
             <a
-              href="tuvan/index.html"
+              href="/EasyTech/tuvan/index.html"
               class="text-blue-700 text-sm font-bold uppercase pb-4"
               >Tư vấn</a
             >
             <a
-              href="tuvan/post3.html"
+              href="/EasyTech/tuvan/post3.html"
               class="text-3xl font-bold hover:text-gray-700 pb-4"
             >
               Asus Vivobook S 16 OLED M5606WA, điển hình cho một chiếc laptop AI
@@ -284,13 +293,13 @@
               <a href="#" class="font-semibold hover:text-gray-800">Lê Khải</a>,
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
-            <a href="tuvan/post3.html" class="pb-6">
+            <a href="/EasyTech/tuvan/post3.html" class="pb-6">
               Năm 2024 đánh dấu sự bùng nổ của trí tuệ nhân tạo (AI) trong mọi
               lĩnh vực, và ngành công nghiệp laptop cũng không nằm ngoài xu
               hướng này.
             </a>
             <a
-              href="tuvan/post3.html"
+              href="/EasyTech/tuvan/post3.html"
               class="uppercase text-gray-800 hover:text-black"
               >Đọc tiếp <i class="fas fa-arrow-right"></i
             ></a>
