--- a/tuvan/post.html
+++ b/tuvan/post.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EasyTech - Tin công nghệ</title>
     <meta name="author" content="EasyTech" />
-    <meta name="description" content="EasyTech là blog công nghệ uy tín, nơi bạn có thể tìm thấy những đánh giá chi tiết, thông tin mới nhất về các sản phẩm công nghệ và câu hỏi đáp từ các chuyên gia. Cập nhật tin tức và đánh giá sản phẩm công nghệ dễ hiểu và dễ tiếp cận." />
-    <meta name="keywords" content="EasyTech, đánh giá sản phẩm công nghệ, thông tin công nghệ, blog công nghệ, sản phẩm công nghệ, câu hỏi đáp công nghệ, KOL công nghệ, đánh giá sản phẩm thực tế, công nghệ dễ hiểu, sản phẩm công nghệ mới" />
+    <meta
+      name="description"
+      content="EasyTech là blog công nghệ uy tín, nơi bạn có thể tìm thấy những đánh giá chi tiết, thông tin mới nhất về các sản phẩm công nghệ và câu hỏi đáp từ các chuyên gia. Cập nhật tin tức và đánh giá sản phẩm công nghệ dễ hiểu và dễ tiếp cận."
+    />
+    <meta
+      name="keywords"
+      content="EasyTech, đánh giá sản phẩm công nghệ, thông tin công nghệ, blog công nghệ, sản phẩm công nghệ, câu hỏi đáp công nghệ, KOL công nghệ, đánh giá sản phẩm thực tế, công nghệ dễ hiểu, sản phẩm công nghệ mới"
+    />
     <meta name="robots" content="index, follow" />
 
     <!-- Tailwind -->
@@ -121,16 +127,18 @@
         <div
           class="w-full container mx-auto flex flex-col sm:flex-row items-center justify-center text-sm font-bold uppercase mt-0 px-6 py-2"
         >
-          <a href="blog.html" class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
+          <a
+            href="/EasyTech/congnghe/index.html"
+            class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Tin tức công nghệ</a
           >
           <a
-            href="../sanpham/blog.html"
+            href="/EasyTech/sanpham/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Đánh giá sản phẩm</a
           >
           <a
-            href="../tuvan/blog.html"
+            href="/EasyTech/tuvan/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Tư vấn</a
           >
@@ -147,7 +155,8 @@
               >Tư vấn</a
             >
             <a href="#" class="text-3xl font-bold hover:text-gray-700 pb-4"
-              >Xiaomi Redmi Pad SE 8.7 WiFi: Món quà công nghệ ý nghĩa dành tặng cha mẹ</a
+              >Xiaomi Redmi Pad SE 8.7 WiFi: Món quà công nghệ ý nghĩa dành tặng
+              cha mẹ</a
             >
             <p href="#" class="text-sm pb-8">
               By
@@ -155,7 +164,12 @@
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
             <p class="pb-3">
-              Công nghệ số hiện nay đã len lỏi vào từng ngóc ngách cuộc sống, kể cả với những người lớn tuổi. Việc sở hữu một chiếc máy tính bảng sẽ giúp cha mẹ bạn kết nối với con cháu, cập nhật tin tức, giải trí và duy trì sự năng động trong cuộc sống. Xiaomi Redmi Pad SE 8.7 WiFi với những tính năng thân thiện, thiết kế tiện dụng và mức giá hợp lý là một lựa chọn hoàn hảo để làm quà tặng cho cha mẹ.
+              Công nghệ số hiện nay đã len lỏi vào từng ngóc ngách cuộc sống, kể
+              cả với những người lớn tuổi. Việc sở hữu một chiếc máy tính bảng
+              sẽ giúp cha mẹ bạn kết nối với con cháu, cập nhật tin tức, giải
+              trí và duy trì sự năng động trong cuộc sống. Xiaomi Redmi Pad SE
+              8.7 WiFi với những tính năng thân thiện, thiết kế tiện dụng và mức
+              giá hợp lý là một lựa chọn hoàn hảo để làm quà tặng cho cha mẹ.
             </p>
             <h1 class="text-2xl font-bold pb-3">
               Đáp ứng hoàn hảo nhu cầu của người lớn tuổi
@@ -173,42 +187,55 @@
               />
               <figcaption
                 style="font-size: 0.9rem; color: gray; margin-top: 4px"
-              >
-              </figcaption>
+              ></figcaption>
             </figure>
             <p class="pb-3">
-              Cha mẹ có thể xem phim, nghe nhạc, đọc báo online, lướt Facebook... ngay trên chiếc máy tính bảng này. Màn hình lớn IPS LCD 8.7 inch, độ phân giải HD+ và tần số quét 90 Hz mang đến hình ảnh rõ nét, trải nghiệm xem phim, đọc báo tuyệt vời. Âm thanh sống động từ hệ thống loa kép Dolby Atmos giúp cha mẹ thưởng thức âm nhạc một cách trọn vẹn nhất.
+              Cha mẹ có thể xem phim, nghe nhạc, đọc báo online, lướt
+              Facebook... ngay trên chiếc máy tính bảng này. Màn hình lớn IPS
+              LCD 8.7 inch, độ phân giải HD+ và tần số quét 90 Hz mang đến hình
+              ảnh rõ nét, trải nghiệm xem phim, đọc báo tuyệt vời. Âm thanh sống
+              động từ hệ thống loa kép Dolby Atmos giúp cha mẹ thưởng thức âm
+              nhạc một cách trọn vẹn nhất.
             </p>
             <p class="pb-3">
-              Với kết nối WiFi nhanh chóng, Redmi Pad SE 8.7 còn giúp cha mẹ dễ dàng truy cập internet, tìm kiếm thông tin, đọc báo, xem tin tức online... mọi lúc. Từ tin tức thời sự, phim tình cảm, chương trình giải trí đến kiến thức sức khỏe, mẹo vặt cuộc sống, tất cả đều trong tầm tay. </p>
-              <h1 class="text-2xl font-bold pb-3">
-                Món quà tinh tế, ý nghĩa với mức giá hợp lý
-              </h1>
-              <figure style="text-align: center; margin: 0">
-                <img
-                  src="https://cdnv2.tgdd.vn/mwg-static/common/News/1572616/tgdd-redmi-pad-se-8.7-4g-18.jpg"
-                  alt="Xiaomi Redmi Pad SE 8.7 WiFi: Món quà công nghệ ý nghĩa dành tặng cha mẹ"
-                  style="
-                    display: block;
-                    margin: 0 auto;
-                    max-width: 100%;
-                    height: auto;
-                  "
-                />
-                <figcaption
-                  style="font-size: 0.9rem; color: gray; margin-top: 4px"
-                >
-                </figcaption>
-                </figure>
-            <p class="pb-3">
-              Redmi Pad SE 8.7 WiFi có mức giá chưa đến 3 triệu đồng, rất phù hợp để làm quà tặng cho cha mẹ. So với các dòng máy tính bảng cao cấp, Redmi Pad SE 8.7 WiFi vẫn đáp ứng tốt các nhu cầu cơ bản của người lớn tuổi với mức giá phải chăng.
+              Với kết nối WiFi nhanh chóng, Redmi Pad SE 8.7 còn giúp cha mẹ dễ
+              dàng truy cập internet, tìm kiếm thông tin, đọc báo, xem tin tức
+              online... mọi lúc. Từ tin tức thời sự, phim tình cảm, chương trình
+              giải trí đến kiến thức sức khỏe, mẹo vặt cuộc sống, tất cả đều
+              trong tầm tay.
             </p>
-            <p class="pb-3">
-              Đặc biệt, mức giá phải chăng giúp cha mẹ an tâm sử dụng hơn, không còn lo lắng về việc làm hư hỏng hay tiếc tiền. Đây là một món quà công nghệ vừa thiết thực vừa ý nghĩa, thể hiện sự quan tâm của bạn đến cha mẹ.</p>
-           
             <h1 class="text-2xl font-bold pb-3">
-              Tóm lại
+              Món quà tinh tế, ý nghĩa với mức giá hợp lý
             </h1>
+            <figure style="text-align: center; margin: 0">
+              <img
+                src="https://cdnv2.tgdd.vn/mwg-static/common/News/1572616/tgdd-redmi-pad-se-8.7-4g-18.jpg"
+                alt="Xiaomi Redmi Pad SE 8.7 WiFi: Món quà công nghệ ý nghĩa dành tặng cha mẹ"
+                style="
+                  display: block;
+                  margin: 0 auto;
+                  max-width: 100%;
+                  height: auto;
+                "
+              />
+              <figcaption
+                style="font-size: 0.9rem; color: gray; margin-top: 4px"
+              ></figcaption>
+            </figure>
+            <p class="pb-3">
+              Redmi Pad SE 8.7 WiFi có mức giá chưa đến 3 triệu đồng, rất phù
+              hợp để làm quà tặng cho cha mẹ. So với các dòng máy tính bảng cao
+              cấp, Redmi Pad SE 8.7 WiFi vẫn đáp ứng tốt các nhu cầu cơ bản của
+              người lớn tuổi với mức giá phải chăng.
+            </p>
+            <p class="pb-3">
+              Đặc biệt, mức giá phải chăng giúp cha mẹ an tâm sử dụng hơn, không
+              còn lo lắng về việc làm hư hỏng hay tiếc tiền. Đây là một món quà
+              công nghệ vừa thiết thực vừa ý nghĩa, thể hiện sự quan tâm của bạn
+              đến cha mẹ.
+            </p>
+
+            <h1 class="text-2xl font-bold pb-3">Tóm lại</h1>
             <figure style="text-align: center; margin: 0">
               <img
                 src="https://cdnv2.tgdd.vn/mwg-static/common/News/1572616/tgdd-redmi-pad-se-8.7-4g-08.jpg"
@@ -222,12 +249,15 @@
               />
               <figcaption
                 style="font-size: 0.9rem; color: gray; margin-top: 4px"
-              >
-              </figcaption>
-              </figure>
-          <p class="pb-3">
-            Xiaomi Redmi Pad SE 8.7 WiFi là món quà công nghệ tuyệt vời dành tặng cho cha mẹ. Với những tính năng thân thiện, thiết kế tiện dụng và mức giá hợp lý, chiếc máy tính bảng này sẽ giúp cha mẹ bạn kết nối với thế giới, giải trí và tận hưởng cuộc sống một cách trọn vẹn hơn.
-          </p>
+              ></figcaption>
+            </figure>
+            <p class="pb-3">
+              Xiaomi Redmi Pad SE 8.7 WiFi là món quà công nghệ tuyệt vời dành
+              tặng cho cha mẹ. Với những tính năng thân thiện, thiết kế tiện
+              dụng và mức giá hợp lý, chiếc máy tính bảng này sẽ giúp cha mẹ bạn
+              kết nối với thế giới, giải trí và tận hưởng cuộc sống một cách
+              trọn vẹn hơn.
+            </p>
           </div>
         </article>
 
@@ -245,7 +275,9 @@
           <div class="flex-1 flex flex-col justify-center md:justify-start">
             <p class="font-semibold text-2xl">Lê Khải</p>
             <p class="pt-2">
-              Cuộc sống liên tục thay đổi, công nghệ không ngừng chuyển mình. Lê Khải tự hào là thành viên của EasyTech và cập nhật tin tức công nghệ cho mọi người.
+              Cuộc sống liên tục thay đổi, công nghệ không ngừng chuyển mình. Lê
+              Khải tự hào là thành viên của EasyTech và cập nhật tin tức công
+              nghệ cho mọi người.
             </p>
             <div
               class="flex items-center justify-center md:justify-start text-2xl no-underline text-blue-800 pt-4"
@@ -296,7 +328,7 @@
       </aside>
     </div>
 
-    
+    <footer>
       <div class="w-full container mx-auto flex flex-col items-center">
         <div
           class="flex flex-col md:flex-row text-center md:text-left md:justify-between py-6"
@@ -309,7 +341,5 @@
         <div class="uppercase pb-6">&copy; myblog.com</div>
       </div>
     </footer>
-
-  
   </body>
 </html>
