--- a/tuvan/post3.html
+++ b/tuvan/post3.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EasyTech - Tin công nghệ</title>
     <meta name="author" content="EasyTech" />
-    <meta name="description" content="EasyTech là blog công nghệ uy tín, nơi bạn có thể tìm thấy những đánh giá chi tiết, thông tin mới nhất về các sản phẩm công nghệ và câu hỏi đáp từ các chuyên gia. Cập nhật tin tức và đánh giá sản phẩm công nghệ dễ hiểu và dễ tiếp cận." />
-    <meta name="keywords" content="EasyTech, đánh giá sản phẩm công nghệ, thông tin công nghệ, blog công nghệ, sản phẩm công nghệ, câu hỏi đáp công nghệ, KOL công nghệ, đánh giá sản phẩm thực tế, công nghệ dễ hiểu, sản phẩm công nghệ mới" />
+    <meta
+      name="description"
+      content="EasyTech là blog công nghệ uy tín, nơi bạn có thể tìm thấy những đánh giá chi tiết, thông tin mới nhất về các sản phẩm công nghệ và câu hỏi đáp từ các chuyên gia. Cập nhật tin tức và đánh giá sản phẩm công nghệ dễ hiểu và dễ tiếp cận."
+    />
+    <meta
+      name="keywords"
+      content="EasyTech, đánh giá sản phẩm công nghệ, thông tin công nghệ, blog công nghệ, sản phẩm công nghệ, câu hỏi đáp công nghệ, KOL công nghệ, đánh giá sản phẩm thực tế, công nghệ dễ hiểu, sản phẩm công nghệ mới"
+    />
     <meta name="robots" content="index, follow" />
 
     <!-- Tailwind -->
@@ -121,16 +127,18 @@
         <div
           class="w-full container mx-auto flex flex-col sm:flex-row items-center justify-center text-sm font-bold uppercase mt-0 px-6 py-2"
         >
-          <a href="blog.html" class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
+          <a
+            href="/EasyTech/congnghe/index.html"
+            class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Tin tức công nghệ</a
           >
           <a
-            href="../sanpham/blog.html"
+            href="/EasyTech/sanpham/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Đánh giá sản phẩm</a
           >
           <a
-            href="../tuvan/blog.html"
+            href="/EasyTech/tuvan/index.html"
             class="hover:bg-gray-400 rounded py-2 px-4 mx-2"
             >Tư vấn</a
           >
@@ -147,7 +155,8 @@
               >Tư vấn</a
             >
             <a href="#" class="text-3xl font-bold hover:text-gray-700 pb-4"
-              >Đây chính là 5 lí do khiến bạn phải rút ví đặt mua OPPO Find X8 Series ngay</a
+              >Đây chính là 5 lí do khiến bạn phải rút ví đặt mua OPPO Find X8
+              Series ngay</a
             >
             <p href="#" class="text-sm pb-8">
               By
@@ -155,8 +164,15 @@
               Đăng vào ngày 26 tháng 11 năm 2024
             </p>
             <p class="pb-3">
-              Năm 2024 đánh dấu sự bùng nổ của trí tuệ nhân tạo (AI) trong mọi lĩnh vực, và ngành công nghiệp laptop cũng không nằm ngoài xu hướng này. ASUS Vivobook S 16 OLED M5606WA chính là minh chứng rõ nét nhất, một thiết bị tiên phong, hội tụ đầy đủ những yếu tố để trở thành "chiếc laptop AI" tiêu biểu. Vậy điều gì đã tạo nên sức hút đặc biệt cho chiếc laptop này? Điều gì đã biến chiếc laptop ASUS Vivobook S 16 OLED M5606WA là điển hình cho laptop AI?</p>
- 
+              Năm 2024 đánh dấu sự bùng nổ của trí tuệ nhân tạo (AI) trong mọi
+              lĩnh vực, và ngành công nghiệp laptop cũng không nằm ngoài xu
+              hướng này. ASUS Vivobook S 16 OLED M5606WA chính là minh chứng rõ
+              nét nhất, một thiết bị tiên phong, hội tụ đầy đủ những yếu tố để
+              trở thành "chiếc laptop AI" tiêu biểu. Vậy điều gì đã tạo nên sức
+              hút đặc biệt cho chiếc laptop này? Điều gì đã biến chiếc laptop
+              ASUS Vivobook S 16 OLED M5606WA là điển hình cho laptop AI?
+            </p>
+
             <h1 class="text-2xl font-bold pb-3">
               1. Hiệu năng AI vượt trội đến từ AMD Ryzen AI 9 HX370
             </h1>
@@ -173,63 +189,92 @@
               />
               <figcaption
                 style="font-size: 0.9rem; color: gray; margin-top: 4px"
-              >
-              </figcaption>
+              ></figcaption>
             </figure>
             <p class="pb-3">
-              Điểm nhấn ấn tượng nhất của ASUS Vivobook S 16 OLED M5606WA chính là bộ vi xử lý AMD Ryzen AI 9 HX370. Đây là con chip đầu tiên trên thế giới được tích hợp AI engine chuyên dụng, mang đến khả năng xử lý AI vượt trội. Với NPU lên đến 50 TOPS, ASUS Vivobook S 16 OLED M5606WA có thể thực hiện các tác vụ AI phức tạp một cách nhanh chóng và mượt mà, từ xử lý ngôn ngữ tự nhiên, nhận diện hình ảnh, đến học máy và nhiều ứng dụng AI khác. </p>
-            <figure style="text-align: center; margin: 0">
-            <p class="pb-3">
-              Sức mạnh của chip AMD Ryzen AI không chỉ dừng lại ở việc tăng tốc độ xử lý, mà còn mở ra tiềm năng ứng dụng AI rộng lớn trong đời sống hàng ngày. Người dùng có thể trải nghiệm những tính năng AI tiên tiến nhất, từ việc tạo nội dung sáng tạo, tự động hóa các tác vụ đến cá nhân hóa trải nghiệm người dùng. </p>
-              <h1 class="text-2xl font-bold pb-3">
-                2. Thiết kế tinh tế, sang trọng dẫn đầu xu hướng  </h1>
-              <figure style="text-align: center; margin: 0">
-                <img
-                  src="https://cdnv2.tgdd.vn/mwg-static/common/News/1572864/ASUS-Vivobook-S-16-OLED-M5606WA-4.jpg"
-                  alt="Asus Vivobook S 16 OLED M5606WA, điển hình cho một chiếc laptop AI của năm 2024"
-                  style="
-                    display: block;
-                    margin: 0 auto;
-                    max-width: 100%;
-                    height: auto;
-                  "
-                />
-                <figcaption
-                  style="font-size: 0.9rem; color: gray; margin-top: 4px"
-                >
-                </figcaption>
-              </figure>
-            <p class="pb-3">
-              ASUS Vivobook S 16 OLED M5606WA không chỉ mạnh mẽ về hiệu năng mà còn sở hữu thiết kế vô cùng tinh tế và sang trọng. Với độ mỏng chỉ 13.9 mm và trọng lượng 1.5 kg, chiếc laptop này vô cùng gọn nhẹ, thuận tiện cho việc di chuyển. Vỏ máy được làm từ kim loại cao cấp, vừa tạo nên vẻ ngoài sang trọng, vừa đảm bảo độ bền bỉ.</p>
-            <figure style="text-align: center; margin: 0">
-            <p class="pb-3">
-              Màn hình OLED 16 inch 3.2K 120Hz là một điểm cộng lớn cho thiết kế của ASUS Vivobook S 16 OLED M5606WA. Màn hình này không chỉ mang đến không gian hiển thị rộng rãi, mà còn cho chất lượng hình ảnh tuyệt vời với độ phân giải cao, màu sắc sống động và độ tương phản tuyệt đối.</p>
-              <h1 class="text-2xl font-bold pb-3">
-                3. Trải nghiệm giải trí đỉnh cao  </h1>
-              <figure style="text-align: center; margin: 0">
-                <img
-                  src="https://cdnv2.tgdd.vn/mwg-static/common/News/1572864/ASUS-Vivobook-S-16-OLED-M5606WA-6.jpg"
-                  alt="Asus Vivobook S 16 OLED M5606WA, điển hình cho một chiếc laptop AI của năm 2024"
-                  style="
-                    display: block;
-                    margin: 0 auto;
-                    max-width: 100%;
-                    height: auto;
-                  "
-                />
-                <figcaption
-                  style="font-size: 0.9rem; color: gray; margin-top: 4px"
-                >
-                </figcaption>
-              </figure>
-            <p class="pb-3">
-              ASUS Vivobook S 16 OLED M5606WA được trang bị những công nghệ hàng đầu, mang đến trải nghiệm giải trí đỉnh cao cho người dùng. Màn hình OLED 3.2K 120 Hz với dải màu DCI-P3 100% hiển thị hình ảnh sắc nét, mượt mà, màu sắc sống động như thật. Cho dù là xem phim, chơi game hay chỉnh sửa ảnh, người dùng đều có thể tận hưởng những trải nghiệm tuyệt vời nhất.
+              Điểm nhấn ấn tượng nhất của ASUS Vivobook S 16 OLED M5606WA chính
+              là bộ vi xử lý AMD Ryzen AI 9 HX370. Đây là con chip đầu tiên trên
+              thế giới được tích hợp AI engine chuyên dụng, mang đến khả năng xử
+              lý AI vượt trội. Với NPU lên đến 50 TOPS, ASUS Vivobook S 16 OLED
+              M5606WA có thể thực hiện các tác vụ AI phức tạp một cách nhanh
+              chóng và mượt mà, từ xử lý ngôn ngữ tự nhiên, nhận diện hình ảnh,
+              đến học máy và nhiều ứng dụng AI khác.
             </p>
             <p class="pb-3">
-              Hệ thống âm thanh được tinh chỉnh bởi các chuyên gia Harman Kardon, mang đến âm thanh chất lượng cao, sống động và chân thực. Âm thanh rõ ràng,  bass mạnh mẽ, tạo nên không gian giải trí sống động.
+              Sức mạnh của chip AMD Ryzen AI không chỉ dừng lại ở việc tăng tốc
+              độ xử lý, mà còn mở ra tiềm năng ứng dụng AI rộng lớn trong đời
+              sống hàng ngày. Người dùng có thể trải nghiệm những tính năng AI
+              tiên tiến nhất, từ việc tạo nội dung sáng tạo, tự động hóa các tác
+              vụ đến cá nhân hóa trải nghiệm người dùng.
             </p>
             <h1 class="text-2xl font-bold pb-3">
-              4. Tính năng AI thông minh, nâng cao trải nghiệm người dùng </h1>
+              2. Thiết kế tinh tế, sang trọng dẫn đầu xu hướng
+            </h1>
+            <figure style="text-align: center; margin: 0">
+              <img
+                src="https://cdnv2.tgdd.vn/mwg-static/common/News/1572864/ASUS-Vivobook-S-16-OLED-M5606WA-4.jpg"
+                alt="Asus Vivobook S 16 OLED M5606WA, điển hình cho một chiếc laptop AI của năm 2024"
+                style="
+                  display: block;
+                  margin: 0 auto;
+                  max-width: 100%;
+                  height: auto;
+                "
+              />
+              <figcaption
+                style="font-size: 0.9rem; color: gray; margin-top: 4px"
+              ></figcaption>
+            </figure>
+            <p class="pb-3">
+              ASUS Vivobook S 16 OLED M5606WA không chỉ mạnh mẽ về hiệu năng mà
+              còn sở hữu thiết kế vô cùng tinh tế và sang trọng. Với độ mỏng chỉ
+              13.9 mm và trọng lượng 1.5 kg, chiếc laptop này vô cùng gọn nhẹ,
+              thuận tiện cho việc di chuyển. Vỏ máy được làm từ kim loại cao
+              cấp, vừa tạo nên vẻ ngoài sang trọng, vừa đảm bảo độ bền bỉ.
+            </p>
+
+            <p class="pb-3">
+              Màn hình OLED 16 inch 3.2K 120Hz là một điểm cộng lớn cho thiết kế
+              của ASUS Vivobook S 16 OLED M5606WA. Màn hình này không chỉ mang
+              đến không gian hiển thị rộng rãi, mà còn cho chất lượng hình ảnh
+              tuyệt vời với độ phân giải cao, màu sắc sống động và độ tương phản
+              tuyệt đối.
+            </p>
+            <h1 class="text-2xl font-bold pb-3">
+              3. Trải nghiệm giải trí đỉnh cao
+            </h1>
+            <figure style="text-align: center; margin: 0">
+              <img
+                src="https://cdnv2.tgdd.vn/mwg-static/common/News/1572864/ASUS-Vivobook-S-16-OLED-M5606WA-6.jpg"
+                alt="Asus Vivobook S 16 OLED M5606WA, điển hình cho một chiếc laptop AI của năm 2024"
+                style="
+                  display: block;
+                  margin: 0 auto;
+                  max-width: 100%;
+                  height: auto;
+                "
+              />
+              <figcaption
+                style="font-size: 0.9rem; color: gray; margin-top: 4px"
+              ></figcaption>
+            </figure>
+            <p class="pb-3">
+              ASUS Vivobook S 16 OLED M5606WA được trang bị những công nghệ hàng
+              đầu, mang đến trải nghiệm giải trí đỉnh cao cho người dùng. Màn
+              hình OLED 3.2K 120 Hz với dải màu DCI-P3 100% hiển thị hình ảnh
+              sắc nét, mượt mà, màu sắc sống động như thật. Cho dù là xem phim,
+              chơi game hay chỉnh sửa ảnh, người dùng đều có thể tận hưởng những
+              trải nghiệm tuyệt vời nhất.
+            </p>
+            <p class="pb-3">
+              Hệ thống âm thanh được tinh chỉnh bởi các chuyên gia Harman
+              Kardon, mang đến âm thanh chất lượng cao, sống động và chân thực.
+              Âm thanh rõ ràng, bass mạnh mẽ, tạo nên không gian giải trí sống
+              động.
+            </p>
+            <h1 class="text-2xl font-bold pb-3">
+              4. Tính năng AI thông minh, nâng cao trải nghiệm người dùng
+            </h1>
             <figure style="text-align: center; margin: 0">
               <img
                 src="https://cdnv2.tgdd.vn/mwg-static/common/News/1572864/ASUS-Vivobook-S-16-OLED-M5606WA-3.jpg"
@@ -243,17 +288,25 @@
               />
               <figcaption
                 style="font-size: 0.9rem; color: gray; margin-top: 4px"
-              >
-              </figcaption>
+              ></figcaption>
             </figure>
             <p class="pb-3">
-              Với sức mạnh của chip AMD Ryzen AI, ASUS Vivobook S 16 OLED M5606WA được trang bị nhiều tính năng AI thông minh, giúp nâng cao trải nghiệm người dùng. Chiếc laptop này có khả năng học hỏi và thích ứng với thói quen sử dụng của người dùng, từ đó tối ưu hóa hiệu suất, tiết kiệm năng lượng và cá nhân hóa trải nghiệm.
+              Với sức mạnh của chip AMD Ryzen AI, ASUS Vivobook S 16 OLED
+              M5606WA được trang bị nhiều tính năng AI thông minh, giúp nâng cao
+              trải nghiệm người dùng. Chiếc laptop này có khả năng học hỏi và
+              thích ứng với thói quen sử dụng của người dùng, từ đó tối ưu hóa
+              hiệu suất, tiết kiệm năng lượng và cá nhân hóa trải nghiệm.
             </p>
             <p class="pb-3">
-              Ví dụ, AI có thể tự động điều chỉnh độ sáng màn hình, âm lượng loa, tùy thuộc vào môi trường xung quanh và thói quen sử dụng của người dùng. AI cũng có thể  giúp người dùng quản lý thời gian hiệu quả hơn, tự động sắp xếp lịch làm việc, nhắc nhở các sự kiện quan trọng.
+              Ví dụ, AI có thể tự động điều chỉnh độ sáng màn hình, âm lượng
+              loa, tùy thuộc vào môi trường xung quanh và thói quen sử dụng của
+              người dùng. AI cũng có thể giúp người dùng quản lý thời gian hiệu
+              quả hơn, tự động sắp xếp lịch làm việc, nhắc nhở các sự kiện quan
+              trọng.
             </p>
             <h1 class="text-2xl font-bold pb-3">
-              5. Thời lượng pin gây ấn tượng mạnh </h1>
+              5. Thời lượng pin gây ấn tượng mạnh
+            </h1>
             <figure style="text-align: center; margin: 0">
               <img
                 src="https://cdnv2.tgdd.vn/mwg-static/common/News/1572864/ASUS-Vivobook-S-16-OLED-M5606WA-7.jpg"
@@ -267,12 +320,16 @@
               />
               <figcaption
                 style="font-size: 0.9rem; color: gray; margin-top: 4px"
-              >
-              </figcaption>
+              ></figcaption>
             </figure>
             <p class="pb-3">
-              ASUS Vivobook S 16 OLED M5606WA được trang bị viên pin dung lượng lớn 75 Wh, cho thời gian sử dụng kéo dài lên đến 14 giờ, đáp ứng nhu cầu sử dụng cả ngày. Kết hợp với công nghệ sạc nhanh 60% trong 49 phút, người dùng có thể yên tâm sử dụng mà không lo lắng về vấn đề hết pin.   </p>
-           </div>
+              ASUS Vivobook S 16 OLED M5606WA được trang bị viên pin dung lượng
+              lớn 75 Wh, cho thời gian sử dụng kéo dài lên đến 14 giờ, đáp ứng
+              nhu cầu sử dụng cả ngày. Kết hợp với công nghệ sạc nhanh 60% trong
+              49 phút, người dùng có thể yên tâm sử dụng mà không lo lắng về vấn
+              đề hết pin.
+            </p>
+          </div>
         </article>
 
         <div
@@ -289,7 +346,9 @@
           <div class="flex-1 flex flex-col justify-center md:justify-start">
             <p class="font-semibold text-2xl">Lê Khải</p>
             <p class="pt-2">
-              Cuộc sống liên tục thay đổi, công nghệ không ngừng chuyển mình. Lê Khải tự hào là thành viên của EasyTech và cập nhật tin tức công nghệ cho mọi người.
+              Cuộc sống liên tục thay đổi, công nghệ không ngừng chuyển mình. Lê
+              Khải tự hào là thành viên của EasyTech và cập nhật tin tức công
+              nghệ cho mọi người.
             </p>
             <div
               class="flex items-center justify-center md:justify-start text-2xl no-underline text-blue-800 pt-4"
@@ -340,7 +399,7 @@
       </aside>
     </div>
 
-    
+    <footer>
       <div class="w-full container mx-auto flex flex-col items-center">
         <div
           class="flex flex-col md:flex-row text-center md:text-left md:justify-between py-6"
@@ -353,7 +412,5 @@
         <div class="uppercase pb-6">&copy; myblog.com</div>
       </div>
     </footer>
-
-  
   </body>
 </html>
